--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.0",
     "morgan": "^1.7.0",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "passport-local": "^1.0.0"
   }
 }
